--- a/_server/mailer/template/SubscribeConfirm/template.ejs
+++ b/_server/mailer/template/SubscribeConfirm/template.ejs
@@ -2,6 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <title><% if (title) { %> <%= title %> <% } %></title>
   </head>
   <body>
@@ -13,18 +14,51 @@
             <div class="mail__container">
               <!-- 订阅者名称 -->
               <% if (name) { %>
-              <div class="mail__container__subscriber"><%= name %></div>
+              <div class="mail__container__subscriber">
+                你好呀~ <span class="text-emphasize"><%= name %></span>
+              </div>
               <% } %>
               <!-- 订阅者邮箱 -->
               <% if (address) { %>
-              <div class="mail__container__address"><%= address %></div>
+              <div class="mail__container__address">
+                <div>
+                  以下是您订阅
+                  <a href="<%= blogConfig.publicPath %> ">
+                    <% if (blogConfig.blogName) { %> <%= blogConfig.blogName %>
+                    <% } %> <% if (!blogConfig.blogName) { %> <%=
+                    blogConfig.publicPath %> <% } %>
+                  </a>
+                  的邮箱：
+                </div>
+                <div>
+                  <span class="text-emphasize"><%= address %></span>
+                </div>
+              </div>
               <% } %>
               <!-- 订阅链接 -->
               <% if (subscribeUrl) { %>
               <div class="mail__container__subscribeUrl">
-                <a href="<%= subscribeUrl %>">确认订阅</a>
+                <div style="margin-bottom: 5px">请点击以下链接进行确认</div>
+                <a href="<%= subscribeUrl %>"><%= subscribeUrl %></a>
               </div>
               <% } %>
+              <div class="footer">
+                <div class="footer__tips">
+                  <div class="footer__tips__left">
+                    若不是您订阅的邮件，请勿理会<br />
+                    本邮件由系统发出，请勿回复
+                  </div>
+                  <div class="footer__tips__right">
+                    <a href="<%=blogConfig.publicPath %>"
+                      ><img src="https://hokori.online/image/profile.jpg"
+                    /></a>
+                  </div>
+                </div>
+                <div class="footer__time">
+                  <% if (blogConfig.blogger) { %> <%= blogConfig.blogger %><br />
+                  <% } %> <%= time %>
+                </div>
+              </div>
             </div>
           </td>
         </tr>
